# Adam

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IDENTITY.md  MEMORY.md  README.md  SOUL.md  USER.md  docker-compose.yml  docker-entrypoint.sh  docker-setup.sh  package.json
.agents/rules/: commit-messages.md
.agents/skills/: README.md
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
db/: schema.sql
docs/: about-page-draft.md  aws-deployment.md  bingo-card.md  docker-research.md
docs/inspiration/: README.md
memory/: 2026-02-02.md
skills/reading/: SKILL.md
tools/: pyproject.toml
tools/src/adam_tools/cli/: context.py  essay.py  fetch.py  ingest.py  init.py  library.py  log.py  note.py  read.py  stats.py  sync.py  trail.py  tweet.py
tools/src/adam_tools/core/: chunker.py  db.py  embeddings.py
